refactor: 重构存储结构并修复多项小问题
1. 重构全息图存储为单文件单全息图格式，添加旧数据迁移功能
2. 修复HeadDatabase调用反射问题，移除废弃的/n换行处理
3. 修复ClickType空指针问题，优化文本截断逻辑
4. 将多个HashMap替换为ConcurrentHashMap提升并发安全性
5. 修正Brightness返回逻辑，将destroyed改为可修改字段
6. 移除冗余的DisplayHologramData类和静态全息图缓存
7. 简化HologramLine文本获取逻辑，优化GUI行移动操作
8. 修复点击事件获取页面逻辑，移除冗余的onClick方法